Fix list spacing
Change list bullet position from inside to outside to prevent items from wrapping under bullet. Add padding to mimic inside style bullets.

--- a/app/_assets/styles/pages/_what.sass
+++ b/app/_assets/styles/pages/_what.sass
@@ -63,8 +63,10 @@ $services-list-color: ep-color('gray', 'light')
 		margin: 0 0 em(10)
 
 	&__list
-		text-align: left
-		color: ep-color('gray', 'light')
-		font-size: rem(14)
-		list-style-type: disc
-		list-style-position: inside
+		ul
+			text-align: left
+			color: ep-color('gray', 'light')
+			font-size: rem(14)
+			list-style-type: disc
+			list-style-position: outside
+			padding-left: em(15)
